<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sample</string>
    <string name="runtime_permissions_error">Cannot continue. Please grant runtime permissions</string>
    <string name="test_category_other">Other</string>
    <string name="title_version">Android Test %1$s</string>
    <string name="clear">Clear</string>
    <string name="view">View</string>
    <string name="export">Export</string>
    <string name="media_player">Media Player</string>
    <string name="face_detect">Face Detect</string>
    <string name="media_controller">Media Controller</string>
    <string name="media">Media</string>
    <string name="search_media">Search</string>
    <string name="search_hint">Query</string>
    <string name="default_uri" />
    <string name="media_browse_tree_header">App-provided MediaItems</string>
    <string name="media_tts">TTS Test</string>
    <string name="opencv">OpenCV</string>
    <!-- A list of fully-qualified test classes that should not be run. -->
    <string-array name="disabled_tests" />
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Account Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="validation">login validation</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_imageitem_list">ImageItems</string>
    <string name="title_imageitem_detail">ImageItem Detail</string>
    <string name="media_ffmpeg">FFmpegTest</string>
</resources>
